Update architecture: switch to PostgreSQL with JSONB, add Node.js backend, organize architecture docs
- Update docker-compose.yml: switch backend from Django to Node.js
- Update architecture diagrams: PostgreSQL as main DB, ClickHouse as optional
- Add Backend API (Node.js) node to architecture diagrams
- Organize architecture files into docs/architecture/ folder
- Add comprehensive documentation: Expo backend analysis, Redis analysis, deployment checklist
- Update all sequence diagrams to use PostgreSQL instead of ClickHouse

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3.8'
 
 services:
-  # Database Service
+  # ============================================
+  # Database Services
+  # ============================================
+  
+  # PostgreSQL - 主資料庫
+  # 用途：儲存謄本 JSON、物件文檔資料、租賃合約、租客資料、財務記錄等
   db:
     image: postgres:16-alpine
     container_name: owner_saas_db
@@ -15,54 +20,135 @@ services:
       - "5432:5432"
     networks:
       - owner_net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # Redis Cache Service
-  redis:
-    image: redis:7-alpine
-    container_name: owner_saas_redis
+  
+  # ============================================
+  # Object Storage
+  # ============================================
+  
+  # MinIO - 物件儲存服務
+  # 用途：儲存房東的物件照片、物件video、物件pdf、物件json、物件csv、
+  # 物件txt、物件doc、物件docx、物件xls、物件xlsx、物件ppt、物件pptx、
+
+  minio:
+    image: minio/minio:latest
+    container_name: owner_saas_minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - minio_data:/data
     ports:
-      - "6379:6379"
+      - "9000:9000"   # API endpoint
+      - "9001:9001"   # Console UI
     networks:
       - owner_net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
-  # Backend: Django API
+  
+  # ============================================
+  # AI Services
+  # ============================================
+  
+  # Rasa - AI 語音助手框架
+  # 用途：對話管理、意圖識別、自然語言處理
+  rasa:
+    build:
+      context: ./rasa
+      dockerfile: Dockerfile
+    container_name: owner_saas_rasa
+    command: rasa run --enable-api --cors "*" --debug
+    volumes:
+      - ./rasa:/app
+    ports:
+      - "5005:5005"  # Rasa HTTP API
+    environment:
+      - RASA_ENDPOINTS_PATH=/app/endpoints.yml
+      - RASA_CREDENTIALS_PATH=/app/credentials.yml
+    depends_on:
+      - db
+      # - redis  # Uncomment when Redis is enabled for tracker store
+    networks:
+      - owner_net
+    # Note: Rasa will use PostgreSQL for tracker store if Redis is not available
+
+  # ============================================
+  # Backend Services
+  # ============================================
+  
+  # Node.js API Backend
+  # 用途：RESTful API、業務邏輯處理、LLM Proxy Orchestrator、與 AI Agents 整合
+  # 技術棧：Node.js + Express/Fastify + LangChain
+  # 注意：根據架構設計，後端使用 Node.js 而非 Django/Python
   backend:
     build: ./backend
     container_name: owner_saas_backend
-    command: python manage.py runserver 0.0.0.0:8000
+    command: node server.js
     volumes:
       - ./backend:/app
+      - /app/node_modules
     ports:
       - "8000:8000"
     environment:
-      - DEBUG=1
-      - SECRET_KEY=dev_secret_key_change_in_prod
-      - ALLOWED_HOSTS=localhost,127.0.0.1,backend
+      - NODE_ENV=development
       - DATABASE_URL=postgres://postgres:postgres@db:5432/ownersaas
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_USE_SSL=false
+      - RASA_API_URL=http://rasa:5005
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      rasa:
+        condition: service_started
+      # - redis  # Uncomment when Redis service is enabled
     networks:
       - owner_net
 
-  # Frontend: Next.js
+  # ============================================
+  # Frontend Services
+  # ============================================
+  
+  # Frontend: Expo Web / Next.js
+  # 注意：根據專案架構，主要使用 Expo，但也可支援 Next.js Web Dashboard
   frontend:
     build: ./frontend
     container_name: owner_saas_frontend
     command: npm run dev
     volumes:
       - ./frontend:/app
-      - /app/node_modules # Prevent host node_modules from overwriting container's
+      - /app/node_modules
     ports:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+      - NEXT_PUBLIC_RASA_URL=http://localhost:5005
     depends_on:
       - backend
     networks:
       - owner_net
 
+  # ============================================
+  # Optional Services
+  # ============================================
+  
   # Cloudflare Tunnel (Optional - Comment out if not set up yet)
+  # 用途：提供安全的公網訪問，無需開放端口
   # tunnel:
   #   image: cloudflare/cloudflared:latest
   #   command: tunnel run
@@ -70,9 +156,14 @@ services:
   #     - TUNNEL_TOKEN=${TUNNEL_TOKEN}
   #   networks:
   #     - owner_net
+  #   depends_on:
+  #     - backend
+  #     - frontend
 
 volumes:
   postgres_data:
+  minio_data:
+  # clickhouse_data:  # Uncomment when ClickHouse is enabled
 
 networks:
   owner_net:
