docs: 重構專案文檔與配置文件
- 拆分產品概述、使用者場景與功能分階段開發計劃
- 新增軟體架構與硬體架構選型說明書
- 新增房屋資料準備手冊與房客預約看房須知
- 更新環境變數配置與 MCP 服務器設定
- 整理 .gitignore 排除敏感文件
- 移除過時文檔與測試文件

--- a/.env.example
+++ b/.env.example
@@ -2,45 +2,55 @@
 # 複製到 .env 檔案並填入您的實際 API keys
 
 # AI 模型 API Keys
-ANTHROPIC_API_KEY=sk-ant-api03-xxxxx
-OPENAI_API_KEY=sk-proj-xxxxx
-DEEPSEEK_API_KEY=sk-xxxxx
-GEMINI_API_KEY=AIzaSyxxxxx
-GOOGLE_API_KEY=AIzaSyxxxxx
-GROK_API_KEY=xai-token-xxxxx
-TOGETHER_AI_API_KEY=xxxxx
-OPENROUTER_API_KEY=sk-or-v1-xxxxx
+ANTHROPIC_API_KEY=sk-demo-1234567890abcdef
+GOOGLE_API_KEY=AIzaSyDemoKey1234567890
+CONTEXT7_API_KEY=ctx7sk-demo-abcdef123456
+CURSOR_API_KEY=key_demo_abcdef1234567890
+DEEPSEEK_API_KEY=sk-demo-abcdef1234567890
+FIRECRAWL_API_KEY=fc-demo-abcdef1234567890
+GEMINI_API_KEY=AIzaSyDemoGeminiKey123456
+GITHUB_TOKEN=ghp_demo_abcdef1234567890
+GROK_API_KEY=xai-token-demo-abcdef123456
+HUGGINGFACE_API_TOKEN=hf_demo_abcdef1234567890
+KIMI_K2=sk-demo-kimi-abcdef123456
+LLAMA_CLOUD_API_KEY=llx-demo-abcdef1234567890
+NGROK_AUTHTOKEN=demo-ngrok-abcdef123456
+OPENAI_API_KEY=sk-demo-openai-abcdef123456
+OPENROUTER_API_KEY=sk-or-demo-abcdef1234567890
+SHODAN_API_KEY=demo-shodan-abcdef123456
+SLACK_BOT_TOKEN=demo-slackbot-abcdef123456
+TOGETHER_AI_API_KEY=demo-together-abcdef123456
 
 # 開發工具 API Keys
 GITHUB_TOKEN=ghp_xxxxx
-GITHUB_PERSONAL_ACCESS_TOKEN=github_pat_xxxxx
-CURSOR_API_KEY=key_xxxxx
-CONTEXT7_API_KEY=ctx7sk-xxxxx
+GITHUB_PERSONAL_ACCESS_TOKEN=github_pat_demo
+CURSOR_API_KEY=key_demo
+CONTEXT7_API_KEY=ctx7sk-demo
 
 # 雲服務和整合
-SLACK_BOT_TOKEN=xoxb-xxxxx
-SLACK_TEAM_ID=T1234567890
-NOTION_API_KEY=secret_xxxxx
-HUGGINGFACE_API_TOKEN=hf_xxxxx
-FIRECRAWL_API_KEY=fc-xxxxx
+SLACK_BOT_TOKEN=demo-slack-xoxb
+SLACK_TEAM_ID=Tdemo123456
+NOTION_API_KEY=secret_demo
+HUGGINGFACE_API_TOKEN=hf_demo
+FIRECRAWL_API_KEY=fc_demo
 
 # 其他工具
-NGROK_AUTHTOKEN=xxxxx
-SHODAN_API_KEY=xxxxx
-KIMI_K2=sk-xxxxx
-LLAMA_CLOUD_API_KEY=llx-xxxxx
+NGROK_AUTHTOKEN=demo-ngrok
+SHODAN_API_KEY=demo-shodan
+KIMI_K2=sk-demo
+LLAMA_CLOUD_API_KEY=llx-demo
 
 # Google Drive OAuth (完整路徑)
-GDRIVE_OAUTH_PATH=/path/to/your/client_secret.json
+GDRIVE_OAUTH_PATH=/path/to/demo/client_secret.json
 
 # 資料庫和基礎設施
-DATABASE_URL=postgresql://user:password@localhost:5432/realestate_saas
-REDIS_URL=redis://localhost:6379
+DATABASE_URL=postgresql://demo:demo@localhost:5432/realestate_saas
+REDIS_URL=redis://demo:demo@localhost:6379
 DOCKER_HOST=unix:///var/run/docker.sock
 
 # 房地產 SaaS 專用
-SECRET_KEY=your-super-secret-key
+SECRET_KEY=demo-super-secret-key
 ALGORITHM=HS256
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
-S3_BUCKET_NAME=realestate-files
+AWS_ACCESS_KEY_ID=demo-access-key
+AWS_SECRET_ACCESS_KEY=demo-secret-key
+S3_BUCKET_NAME=demo-realestate-files
