--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ temp/
 mermaid-preview.html
 vscode-mermaid-extension.html
 test-output-*.png
+Google Drive Outh.json
+Outh.json
 
 # ============================================
 # Database
